fix toggle btn on mobile

--- a/css/codeception.css
+++ b/css/codeception.css
@@ -1170,3 +1170,7 @@ body .panel-info>.panel-heading {
 .btn-group--source {
 	float: right;
 }
+
+.navbar-toggle {
+	margin-right: 0;
+}
